Fix unreadable packet exception